--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-div {
-    background-color: red;
-}
-
 #inputCMD {
     all:unset;
     background-color: red;
@@ -9,3 +5,10 @@ div {
     width:0;
 }
 
+#suggestionTerminal {
+    color:gray;
+}
+
+.inputContainer {
+    background-color: rgb(164, 203, 234);
+}
